# noteworthy

./: Cargo.toml  README.md  noteworthy.ini  test.db
src/: config.rs  fs_interface.rs  intern_error.rs  main.rs  notification.rs  remote.rs  ui.rs
src/ui/: block.rs  db_block.rs  dir_block.rs  file_item.rs
