[package]
name = "noteworthy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
configparser = "3.0.2"
crossterm = { version = "0.26.1", features = ["event-stream", "futures-core"] }
futures = "0.3.28"
futures-timer = "3.0.2"
glob = "0.3.1"
ini = "1.3.0"
lazy_static = "1.4.0"
rusqlite = "0.29.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
ssh2 = "0.9.4"
thiserror = "1.0.40"
tui = "0.19.0"
